Fixed the alignment issue in add candidate

--- a/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/addCandidateSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmRecruitmentPlugin/web/css/addCandidateSuccess.css
@@ -119,7 +119,7 @@ input.calendarBtn, input.calendarBtn[type="button"] {
 }
 
 label.error{
-    width:170px !important;
+    width:220px !important;
     padding-left: 1px;
 }
 
